# MuOxi

./: .env  .gitignore  .postgres-setup  .travis.yml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.postgres  README.md  aliases.js  build.sh  dev-entrypoint.sh  diesel.toml  docker-compose.override.yml  docker-compose.yml  gh-pages.bash  index.html  init-muoxi-db.sql  rust-toolchain.toml  search-index.js  settings.html  source-files.js  websocket.py
benchmarks/: AGENTS.md  Cargo.toml  random_json.py
benchmarks/results/: io_benchmarks.txt
benchmarks/src/: io.rs  main.rs  report.rs
config/: accounts.json  clients.json  muoxi.ini  people.json
db/: AGENTS.md  Cargo.toml  all.html  index.html  sidebar-items.js  struct.DatabaseHandler.html
db/cache/: index.html  static.REDIS_SERVER.html  struct.Cache.html
db/cache_structures/: index.html  sidebar-items.js  trait.Cachable.html
db/cache_structures/socket/: index.html  sidebar-items.js  struct.CacheSocket.html
db/clients/: index.html  sidebar-items.js  struct.Client.html  struct.ClientVector.html
db/schema/: sidebar-items.js
db/schema/clients/: constant.all_columns.html  index.html  struct.table.html  type.BoxedQuery.html  type.SqlType.html
db/schema/clients/columns/: index.html  struct.ip.html  struct.port.html
db/schema/clients/dsl/: index.html
db/src/: cache.rs  clients.rs  conn.rs  lib.rs  schema.rs  structures.rs  templates.rs  utils.rs
db/src/cache_structures/: mod.rs  socket.rs
db/src/objects/: attribute.rs  character_account.rs  mod.rs  object.rs  script.rs  tag.rs
db/templates/: index.html  struct.ClientDB.html
db/tests/: integration_objects.rs  integration_scripts.rs  integration_sqlite.rs
db/utils/: enum.FilterOn.html  fn.bson_to_object.html  fn.gen_uid.html  fn.json_to_object.html  index.html  sidebar-items.js  type.JsonDecoderResult.html  type.UID.html
docs/: README.md  architecture.md  deployment.md  development.md  extension-guide.md  getting-started.md  glossary.md  roadmap.md  world-building.md
examples/extension/: Cargo.toml
examples/extension/src/: main.rs
json/: README.md  accounts.json  characters.json
migrations/2020-01-07-125133_accounts/: down.sql  up.sql
migrations/2020-01-21-170702_muoxi/: down.sql  up.sql
migrations/2026-05-07-000000_initial/: down.sql  up.sql
migrations/2026-05-07-000100_objects/: down.sql  up.sql
migrations/2026-05-07-000200_scripts/: down.sql  up.sql
muoxi/: AGENTS.md  Cargo.toml
muoxi/src/: comms.rs  lib.rs  main.rs  states.rs
muoxi/src/.old/: Cargo.toml  main.rs  states.rs
muoxi/src/engine/: muoxi.rs
muoxi/src/server/: AGENTS.md  auth.rs  cmds.rs  comms.rs  engine.rs  hooks.rs  locks.rs  main.rs  prelude.rs  registry.rs  scheduler.rs  seed.rs  states.rs  typeclass.rs  world.rs
muoxi/src/server/commands/: look.rs  mod.rs  quit.rs  say.rs  who.rs
muoxi/src/server/scripts/: heartbeat.rs  mod.rs
muoxi/src/staging/: cmds.rs  comms.rs  connstates.rs  copyover.rs  prelude.rs  staging_proxy.rs  states.rs
muoxi/src/watchdog/: watchdog.rs
muoxi/src/webserver/: webserver.rs
muoxi/src/webserver/static/: index.html
muoxi/tests/: registry.rs  websocket.py
muoxi_benchmarks/: sidebar-items.js
muoxi_benchmarks/io/: constant._IMPL_DESERIALIZE_FOR_Person.html  fn.benchmark_io_json_100_000.html  index.html  sidebar-items.js
muoxi_client/: Cargo.toml
muoxi_client/static/: index.html
muoxi_db/: Cargo.toml
muoxi_db/src/: clients.rs  lib.rs  utils.rs
muoxi_engine/: Cargo.toml  all.html  fn.main.html  index.html
muoxi_engine/src/: muoxi.rs
muoxi_proxy/: Cargo.toml
muoxi_proxy/src/: main.rs  proxy_server.rs
muoxi_sandbox/: all.html  constant._IMPL_DESERIALIZE_FOR_Person.html  constant._IMPL_SERIALIZE_FOR_Person.html  fn.main.html  index.html  sidebar-items.js  struct.Person.html
muoxi_staging/: Cargo.toml  all.html  fn.client_cleanup.html  fn.display_welcome.html  fn.get.html  fn.main.html  fn.process.html  fn.send.html  fn.transfer.html  index.html  macro.cmdset!.html  macro.cmdset.html  sidebar-items.js  static.GAME_ADDR.html  static.PROXY_ADDR.html
muoxi_staging/cmds/: fn.do_cmd.html  index.html  sidebar-items.js
muoxi_staging/cmds/game_commands/: index.html
muoxi_staging/cmds/proxy_commands/: index.html  sidebar-items.js  struct.CmdProxyAccount.html  struct.CmdProxyNew.html
muoxi_staging/comms/: enum.Message.html  index.html  sidebar-items.js  struct.Client.html  struct.ClientAccount.html  struct.Comms.html  struct.Server.html  type.Rx.html  type.Tx.html
muoxi_staging/connstates/: struct.EnterGame.html  struct.MainMenu.html  struct.NewAcctName.html
muoxi_staging/copyover/: fn.copy.html  index.html  sidebar-items.js  struct.CopyOver.html
muoxi_staging/prelude/: index.html  sidebar-items.js  static.GAME_ADDR.html  static.PROXY_ADDR.html  struct.CmdSet.html  trait.Command.html  type.CommandResult.html  type.LinesCodecResult.html  type.Rx.html  type.Tx.html
muoxi_staging/src/: comms.rs  main.rs  staging_proxy.rs  states.rs
muoxi_staging/states/: constant._IMPL_DESERIALIZE_FOR_ConnStates.html  constant._IMPL_SERIALIZE_FOR_ConnStates.html  enum.ConnStates.html  index.html  sidebar-items.js
muoxi_states/: Cargo.toml
muoxi_states/src/: lib.rs
muoxi_watchdog/: Cargo.toml  all.html  enum.JsonFile.html  fn.trigger_upload.html  sidebar-items.js  static.CLIENTS.html
muoxi_watchdog/src/: main.rs
muoxi_web/: all.html  fn.main.html  index.html  sidebar-items.js  struct.ClientData.html  struct.WebSocketServer.html
muoxi_webserver/: Cargo.toml
muoxi_webserver/src/: main.rs  server.rs
muoxi_webserver/static/: index.html
resources/: welcome.txt
resources/web/: index.html
src/db/: cache.rs.html  clients.rs.html  lib.rs.html  templates.rs.html  utils.rs.html
src/muoxi_benchmarks/: io.rs.html  main.rs.html  report.rs.html
src/muoxi_engine/: muoxi.rs.html
src/muoxi_sandbox/: main.rs.html
src/muoxi_staging/: cmds.rs.html  (+5 more)
states/: Cargo.toml  enum.ConnStates.html  index.html  sidebar-items.js
static/: index.html
tester/: AGENTS.md  Cargo.toml
tester/src/: main.rs
(+43 files in other folders)
