[package]
name = "benchmarks"
version = "0.1.0"
authors = ["duysqubix <duys@qubixat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.44"
serde = {version = "1.0.104", features=["derive"]}
db = {path ="../db"}

[[bin]]
name = "muoxi_benchmarks"
path = "src/main.rs"