[package]
name = "benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
db = { path = "../db" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[[bin]]
name = "muoxi_benchmarks"
path = "src/main.rs"
