[package]
name = "db"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "db"
path = "src/lib.rs"

[dependencies]
diesel = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
