[package]
name = "muoxi"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
db = { path = "../db" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

log = { workspace = true }
pretty_env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hotwatch = { workspace = true }
async-trait = { workspace = true }

[[bin]]
name = "muoxi_engine"
path = "src/engine/muoxi.rs"

[[bin]]
name = "muoxi_staging"
path = "src/staging/staging_proxy.rs"

[[bin]]
name = "muoxi_watchdog"
path = "src/watchdog/watchdog.rs"

[[bin]]
name = "muoxi_web"
path = "src/webserver/webserver.rs"
