[package]
name = "muoxi"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "muoxi"
path = "src/lib.rs"

[dependencies]
db = { path = "../db" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

log = { workspace = true }
pretty_env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[[bin]]
name = "muoxi_server"
path = "src/server/main.rs"

[[bin]]
name = "muoxi_web"
path = "src/webserver/webserver.rs"
