[package]
name = "muoxi_db"
version = "0.1.0"
authors = ["duysqubix <duys@qubixat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bson = "0.14.0"
mongodb = "0.9.0"
muoxi_states = {path = "../muoxi_states"}
serde_json = { version = "1.0", features = ["preserve_order"] }
rand = "^0.7"


