[package]
name = "mu_oxi"
version = "0.1.0"
authors = ["duys duys@qubixat.com"]
edition = "2018"
description = """
An asynchronous mud game engine written in Rust.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "muoxi_proxy"
path = "src/main.rs"

[dependencies]
ws = "^0.9"
mio = "0.6.14"
mio-extras = "2.0"

