[package]
name = "muoxi_tcp"
version = "0.1.0"
authors = ["duysqubix <duys@qubixat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
tokio = {version = "^0.2", features=["full"]}
tokio-util = { version = "^0.2", features = ["full"] }
futures = "^0.3"

[[bin]]
name = "muoxi_staging"
path = "src/staging_proxy.rs"
