[package]
name = "muoxi_staging"
version = "0.1.0"
authors = ["duysqubix <duys@qubixat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "^0.3"
tokio = {version = "^0.2", features=["full"]}
tokio-util = { version = "^0.2", features = ["full"] }
futures = "^0.3"
log = "^0.4"
machine = "0.3.0"
rand = "^0.7"


[[bin]]
name = "muoxi_staging"
path = "src/staging_proxy.rs"
