[package]
name = "muoxi_watchdog"
version = "0.1.0"
authors = ["duysqubix <duys@qubixat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotwatch = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
bson = "0.14.0"
mongodb = "0.9.0"
muoxi_db = {path = "../muoxi_db"}
serde_json = { version = "1.0", features = ["preserve_order"] }


[[bin]]
name = "muoxi_watchdog"
path = "src/main.rs"