[package]
name = "tester"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
db = { path = "../db" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
diesel = { workspace = true }

[[bin]]
name = "muoxi_sandbox"
path = "src/main.rs"
