[package]
name = "muoxi-example-extension"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["db-sqlite"]
db-sqlite = ["muoxi/db-sqlite", "db/db-sqlite"]
db-postgres = ["muoxi/db-postgres", "db/db-postgres"]

[dependencies]
muoxi = { path = "../../muoxi", default-features = false }
db = { path = "../../db", default-features = false }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "muoxi-example-extension"
path = "src/main.rs"
