[package]
name = "mu_oxi"
version = "0.1.0"
authors = ["duys duys@qubixat.com"]
edition = "2018"
description = """
An asynchronous mud game engine written in Rust.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "^0.2", features=["full"]}
tokio-util = {version = "^0.2", features=["codec"]}
futures = {version = "0.3"}
async-trait = "^0.1"

[lib]
name = "muoxi"
path = "src/lib.rs"


[[bin]]
name = "muoxi-init"
path = "src/main.rs"